// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalizeAnswerMarkdownArtifacts – baseline integration > chinese headings (final mode) > snapshot: final output is stable 1`] = `
"## 一、建筑高度控制

根据《城市设计管控导则》，高强度片区建筑高度应满足以下要求：

### （一）核心区域限高

核心区域建筑高度不得超过100米，具体计算公式如下：

$$
限高 = 基准高度 × 调整系数
$$

1) 调整系数取值
①当容积率≥4.0时，调整系数为0.8
②当容积率<4.0时，调整系数为1.0

## 二、退线距离要求

建筑退线距离应满足GB/T 51328-2019的相关规定。

### （二）道路退线

1. 主干道退线不小于15米
2. 次干道退线不小于10米
3. 支路退线不小于5米"
`;

exports[`normalizeAnswerMarkdownArtifacts – baseline integration > mixed artifacts (final mode) > snapshot: final output is stable 1`] = `
"让我分析一下这个问题

## 检索综述

根据检索结果，高强度片区的建筑限高要求如下：
### 1. 基本限高规定

建筑高度计算公式为 $$
$$
H = H_0 \\times K
$$
$$，其中：

- $H_0$ 为基准高度
- $K$ 为调整系数

相关资料相关资料请参考附件。

见图3.0.3中的示意图，建筑高度不得超过 $100m$。

| 区域 | 限高(m) | 容积率 |
|------|---------|--------|
| 核心区 | 100 | 4.0 |
| 过渡区 | 80 | 3.5 |
### 1. 特殊情况

当建筑位于视线通廊范围内时，限高应按照的规定执行。

数值范围为 50~100 米。


## 结论

高强度片区建筑限高应综合考虑容积率、视线通廊等因素。"
`;

exports[`normalizeAnswerMarkdownArtifacts – baseline integration > mixed artifacts (streaming mode) > snapshot: streaming output is stable 1`] = `
"让我分析一下这个问题

## 检索综述

根据检索结果，高强度片区的建筑限高要求如下：

### 1. 基本限高规定

建筑高度计算公式为 $$
H = H_0 \\times K
$$，其中：

- $H_0$ 为基准高度
- $K$ 为调整系数

相关资料相关资料请参考附件。

见图3.0.3中的示意图，建筑高度不得超过 $100m$。

| 区域 | 限高(m) | 容积率 |
|------|---------|--------|
| 核心区 | 100 | 4.0 |
| 过渡区 | 80 | 3.5 |

### 1. 特殊情况

当建筑位于视线通廊范围内时，限高应按照（3.2.6）的规定执行。

数值范围为 50~100 米。

核心结论：高强度片区建筑限高应综合考虑容积率、视线通廊等因素。"
`;

exports[`normalizeAnswerMarkdownArtifacts – baseline integration > streaming partial (light mode) > snapshot: streaming output is stable 1`] = `
"正在思考根据检索结果，建筑限高要求如下：

**重要指标**：

1. 基本限高为100米
2. 调整系数为0.8
3. 最终限高为80米

- 核心区域：限高100m
- 过渡区域：限高80m

**建筑高度** 应满足以下条件：

## 详细解析
建筑高度计算需要考虑多个因素。"
`;

exports[`three-phase normalization snapshots > sample-chinese-headings.md > snapshot: final phase 1`] = `
"## 一、建筑高度控制

根据《城市设计管控导则》，高强度片区建筑高度应满足以下要求：

### （一）核心区域限高

核心区域建筑高度不得超过100米，具体计算公式如下：

$$
限高 = 基准高度 × 调整系数
$$

1) 调整系数取值
①当容积率≥4.0时，调整系数为0.8
②当容积率<4.0时，调整系数为1.0

## 二、退线距离要求

建筑退线距离应满足GB/T 51328-2019的相关规定。

### （二）道路退线

1. 主干道退线不小于15米
2. 次干道退线不小于10米
3. 支路退线不小于5米"
`;

exports[`three-phase normalization snapshots > sample-chinese-headings.md > snapshot: finalizing phase 1`] = `
"## 一、建筑高度控制

根据《城市设计管控导则》，高强度片区建筑高度应满足以下要求：

### （一）核心区域限高

核心区域建筑高度不得超过100米，具体计算公式如下：

限高 = 基准高度 × 调整系数

1) 调整系数取值
①当容积率≥4.0时，调整系数为0.8
②当容积率<4.0时，调整系数为1.0

## 二、退线距离要求

建筑退线距离应满足GB/T 51328-2019的相关规定。

### （二）道路退线

1. 主干道退线不小于15米
2. 次干道退线不小于10米
3. 支路退线不小于5米"
`;

exports[`three-phase normalization snapshots > sample-chinese-headings.md > snapshot: streaming phase 1`] = `
"一、建筑高度控制

根据《城市设计管控导则》，高强度片区建筑高度应满足以下要求：

（一）核心区域限高

核心区域建筑高度不得超过100米，具体计算公式如下：

限高 = 基准高度 × 调整系数

1) 调整系数取值
①当容积率≥4.0时，调整系数为0.8
②当容积率<4.0时，调整系数为1.0

二、退线距离要求

建筑退线距离应满足GB/T 51328-2019的相关规定。

（二）道路退线

1. 主干道退线不小于15米
2. 次干道退线不小于10米
3. 支路退线不小于5米"
`;

exports[`three-phase normalization snapshots > sample-mixed-artifacts.md > snapshot: final phase 1`] = `
"让我分析一下这个问题

## 检索综述

根据检索结果，高强度片区的建筑限高要求如下：
### 1. 基本限高规定

建筑高度计算公式为 $$
$$
H = H_0 \\times K
$$
$$，其中：

- $H_0$ 为基准高度
- $K$ 为调整系数

相关资料相关资料请参考附件。

见图3.0.3中的示意图，建筑高度不得超过 $100m$。

| 区域 | 限高(m) | 容积率 |
|------|---------|--------|
| 核心区 | 100 | 4.0 |
| 过渡区 | 80 | 3.5 |
### 1. 特殊情况

当建筑位于视线通廊范围内时，限高应按照的规定执行。

数值范围为 50~100 米。


## 结论

高强度片区建筑限高应综合考虑容积率、视线通廊等因素。"
`;

exports[`three-phase normalization snapshots > sample-mixed-artifacts.md > snapshot: finalizing phase 1`] = `
"让我分析一下这个问题

## 检索综述

根据检索结果，高强度片区的建筑限高要求如下：

### 1. 基本限高规定

建筑高度计算公式为 $$
H = H_0 \\times K
$$，其中：

- $H_0$ 为基准高度
- $K$ 为调整系数

相关资料相关资料请参考附件。

见图3.0.3中的示意图，建筑高度不得超过 $100m$。

| 区域 | 限高(m) | 容积率 |
|------|---------|--------|
| 核心区 | 100 | 4.0 |
| 过渡区 | 80 | 3.5 |

### 1. 特殊情况

当建筑位于视线通廊范围内时，限高应按照的规定执行。

数值范围为 50~100 米。

核心结论：高强度片区建筑限高应综合考虑容积率、视线通廊等因素。"
`;

exports[`three-phase normalization snapshots > sample-mixed-artifacts.md > snapshot: streaming phase 1`] = `
"让我分析一下这个问题

## 检索综述

根据检索结果，高强度片区的建筑限高要求如下：

### 1. 基本限高规定

建筑高度计算公式为 $$
H = H_0 \\times K
$$，其中：

- $H_0$ 为基准高度
- $K$ 为调整系数

相关资料相关资料请参考附件。

见图3.0.3中的示意图，建筑高度不得超过 $100m$。

| 区域 | 限高(m) | 容积率 |
|------|---------|--------|
| 核心区 | 100 | 4.0 |
| 过渡区 | 80 | 3.5 |

### 1. 特殊情况

当建筑位于视线通廊范围内时，限高应按照（3.2.6）的规定执行。

数值范围为 50~100 米。

核心结论：高强度片区建筑限高应综合考虑容积率、视线通廊等因素。"
`;

exports[`three-phase normalization snapshots > sample-streaming-partial.md > snapshot: final phase 1`] = `
"正在思考根据检索结果，建筑限高要求如下：

**重要指标**：

1. 基本限高为100米
2. 调整系数为0.8
3. 最终限高为80米

- 核心区域：限高100m
- 过渡区域：限高80m

**建筑高度** 应满足以下条件：

## 详细解析

建筑高度计算需要考虑多个因素。"
`;

exports[`three-phase normalization snapshots > sample-streaming-partial.md > snapshot: finalizing phase 1`] = `
"正在思考根据检索结果，建筑限高要求如下：

**重要指标**：

1. 基本限高为100米
2. 调整系数为0.8
3. 最终限高为80米

- 核心区域：限高100m
- 过渡区域：限高80m

**建筑高度** 应满足以下条件：

## 详细解析

建筑高度计算需要考虑多个因素。"
`;

exports[`three-phase normalization snapshots > sample-streaming-partial.md > snapshot: streaming phase 1`] = `
"正在思考根据检索结果，建筑限高要求如下：

**重要指标**：

1. 基本限高为100米
2. 调整系数为0.8
3. 最终限高为80米

- 核心区域：限高100m
- 过渡区域：限高80m

**建筑高度** 应满足以下条件：

## 详细解析
建筑高度计算需要考虑多个因素。"
`;
